--- a/src/index.html
+++ b/src/index.html
@@ -7,7 +7,7 @@
   <meta name="apple-mobile-web-app-status-bar-style" content="black">
   <meta name="apple-touch-fullscreen" content="yes">
   <meta name="format-detection" content="telephone=no, email=no">
-  <title>用户资料上传</title>
+  <title>Vue Template</title>
   <style>html,body{min-height:100%;}</style>
 </head>
 <body>
